don't edit turn indicator

--- a/firstinbattle/app/view1/view1.html
+++ b/firstinbattle/app/view1/view1.html
@@ -7,7 +7,7 @@
 </form>
 
 <p>I am {{user.name}} and I have {{user.cards.length}} cards.</p>
-<label><input type="checkbox" ng-model="is_turn"> Is it my turn?</label>
+<label><input type="checkbox" disabled="disabled" ng-model="is_turn"> Is it my turn?</label>
 
 <h2>Request Card</h2>
 <form novalidate class="simple-form">
