--- a/firstinbattle/app/view1/view1.html
+++ b/firstinbattle/app/view1/view1.html
@@ -3,7 +3,8 @@
 <h2>User info</h2>
 <form novalidate class="simple-form">
     <input type="text" ng-model="user.name" ng-disabled="is_registered"/><br/>
-    <input type="submit" ng-click="new_game(user)" value="New/Join Game" ng-disabled="is_registered"/>
+    <input type="submit" ng-click="new_game(user)" value="New/Join Game"
+           ng-disabled="is_registered"/>
 </form>
 
 <p>I am {{user.name}} and I have {{user.cards.length}} cards.</p>
@@ -34,6 +35,14 @@
 <h2>Cards</h2>
 <ul>
     <li ng-repeat="card in user.cards">{{card.number}}, {{card.suit}}</li>
+</ul>
+
+<h2>Pairs</h2>
+<ul>
+    <li ng-repeat="pair in user.pairs">
+        (a) {{pair.card0.number}}, {{pair.card0.suit}} -
+        (b) {{pair.card1.number}}, {{pair.card1.suit}}
+    </li>
 </ul>
 
 <h2>Players</h2>
